--- a/inventory/templates/inventory/food_inventory_count.html
+++ b/inventory/templates/inventory/food_inventory_count.html
@@ -27,6 +27,9 @@
             {% endfor %}
         </tbody>
     </table>
+    <div class="ui basic segment">
+        <a href="{% url 'inventory:food_inventory_list'%}" class="ui blue button">Back</a>
+    </div>
     <script type="text/javascript">
                
         $(document).ready(function() {
