--- a/inventory/templates/inventory/medicine_add.html
+++ b/inventory/templates/inventory/medicine_add.html
@@ -29,8 +29,8 @@
                                         {{form.dose}}
                                     </div>
                                     <div class="field">
-                                        <label>Mass</label>
-                                        {{form.mass}}
+                                        <label>Unit of Measurement</label>
+                                        {{form.uom}}
                                     </div>
                                 </div>
 
