--- a/inventory/templates/inventory/miscellaneous_inventory_count.html
+++ b/inventory/templates/inventory/miscellaneous_inventory_count.html
@@ -13,29 +13,23 @@
 <table id="tabledata" class="ui celled table responsive nowrap" style="width:100%">
     <thead>
         <tr>
-            <th>Equipment</th>
-            <th>Description</th>
-            <th></th>
+            <th>Quantity</th>
+            <th>Date Counted</th>
+            <th>Counted By</th>
         </tr>
     </thead>
         <tbody>
             {% for data in data %}
             <tr>
-                <td style="width:300px;" >{{ data.equipment }}</td>
-                <td>{{ data.description }}</td>
-                <td class="center aligned" style="width:100px;">
-                    <a href="{% url 'inventory:equipment_edit' data.id %}" style="margin-right:10px;">
-                        <i class="blue edit icon"></i>
-                    </a>
-                    <a onclick="return confirm('Are you sure?')" class = "button"   href="{% url 'inventory:equipment_delete' data.id %}">
-                        <i class="red trash alternate icon"></i>
-                    </a>
-                           
-                </td>       
+                <td>{{ data.quantity }}</td>
+                <td>{{ data.date_counted }}</td>    
             </tr>
             {% endfor %}
         </tbody>
     </table>
+    <div class="ui basic segment">
+        <a href="{% url 'inventory:miscellaneous_inventory_list'%}" class="ui blue button">Back</a>
+    </div>
     <script type="text/javascript">
                
         $(document).ready(function() {
