--- a/profiles/templates/profiles/sidebar_inventory.html
+++ b/profiles/templates/profiles/sidebar_inventory.html
@@ -21,7 +21,7 @@
                                             <i class="plus circle icon "></i>
                                     </div>
                                     <div class = "subdiv">
-                                            <a class = "submenu" href="{% url 'inventory:equipment_add'%}">Add Equipment</a>
+                                            <a class = "submenu" href="{% url 'inventory:miscellaneous_add'%}">Add Miscellaneous Item</a>
                                             <i class="plus circle icon "></i>
                                     </div>
                                     <div class = "subdiv">
@@ -33,7 +33,7 @@
                                             <i class="list alternate icon "></i>
                                     </div>
                                     <div class = "subdiv">
-                                            <a class = "submenu" href="{% url 'inventory:equipment_list'%}">Equipment List View</a>
+                                            <a class = "submenu" href="{% url 'inventory:miscellaneous_list'%}">Miscellaneous List View</a>
                                             <i class="list alternate icon "></i>
                                     </div>
                                     <div class = "subdiv">
@@ -45,7 +45,7 @@
                                         <i class="list alternate icon "></i>
                                     </div>
                                     <div class = "subdiv">
-                                        <a class = "submenu" href="{% url 'inventory:equipment_inventory_list'%}">Equipment Inventory List View</a>
+                                        <a class = "submenu" href="{% url 'inventory:miscellaneous_inventory_list'%}">Miscellaneous Inventory List View</a>
                                         <i class="list alternate icon "></i>
                                     </div>
                                    
