--- a/training/templates/training/classify_k9_select.html
+++ b/training/templates/training/classify_k9_select.html
@@ -28,6 +28,10 @@
                 <th>Mother</th>
                 <td>Mother</td>
             </tr>
+            <tr>
+                <th>Classification</th>
+                <td>{{data.capability}}</td>
+            </tr>
         </thead>
     </table>
 </div>
@@ -36,8 +40,8 @@
     <table class="ui two column celled table">
         <thead>
             <tr>
-                <th>Categorie</th>
-                <th>Skill</th>
+                <th>Categories</th>
+                <th>Skills</th>
             </tr>
             <tr>
                 <th>Demand</th>
@@ -72,7 +76,8 @@
         <div class="field">
             <select name="select_classify" id="select_classify">
                 <option value="SAR">SAR</option>
-                <option value="Narcotics">Narcotics</option>
+                <option value="NDD">NDD</option>
+                <option value="EDD">EDD</option>
             </select>
         </div>
         <div class="field">
