--- a/inventory/templates/inventory/food_count_form.html
+++ b/inventory/templates/inventory/food_count_form.html
@@ -28,16 +28,17 @@
                                         {{data.quantity}}
                                     </div>
                                 </div>
-
-                                <div class="three fields">
-                                    <div class="field">
-                                        <label>{{label}}</label>
+                                <div class="field">
+                                    <div class="inline field">
+                                        <div class="field">
+                                                <label>{{label}}</label>
+                                        </div>
                                         {{form.quantity}}
+                                        <div class="ui left pointing blue basic label">
+                                            Dog Food per Kg.
+                                        </div>
                                     </div>
-                                    <div class="field"></div>
-                                    <div class="field"></div>
-                                </div>
-
+                                </div>  
                                 <div class="ui inverted right aligned segment" style="padding: 0px;">
                                     <button onclick="return confirm('Are you sure?')" class = "ui button green" type="submit" >{{ actiontype }}</button>
                                 </div>
