--- a/inventory/templates/inventory/medicine_inventory_count.html
+++ b/inventory/templates/inventory/medicine_inventory_count.html
@@ -9,7 +9,6 @@
         {% endfor %}
     {% endif %}
 </div>
-
 <table id="tabledata" class="ui celled table responsive nowrap" style="width:100%">
     <thead>
         <tr>
@@ -27,6 +26,9 @@
             {% endfor %}
         </tbody>
     </table>
+    <div class="ui basic segment">
+        <a href="{% url 'inventory:medicine_inventory_list'%}" class="ui blue button">Back</a>
+    </div>
     <script type="text/javascript">
                
         $(document).ready(function() {
