--- a/inventory/templates/inventory/miscellaneous_count_form.html
+++ b/inventory/templates/inventory/miscellaneous_count_form.html
@@ -21,7 +21,7 @@
                                 <div class="two fields">
                                     <div class="field">
                                         <label>Name</label>
-                                        {{data.equipment}}
+                                        {{data.miscellaneous}}
                                     </div>
                                     <div class="field">
                                         <label>Current Quantity</label>
@@ -29,14 +29,17 @@
                                     </div>
                                 </div>
 
-                                <div class="three fields">
-                                    <div class="field">
-                                        <label>{{label}}</label>
+                                <div class="field">
+                                    <div class="inline field">
+                                        <div class="field">
+                                                <label>{{label}}</label>
+                                        </div>
                                         {{form.quantity}}
+                                        <div class="ui left pointing blue basic label">
+                                            item per {{data.miscellaneous.uom}}
+                                        </div>
                                     </div>
-                                    <div class="field"></div>
-                                    <div class="field"></div>
-                                </div>
+                                </div>  
                               
                                 <div class="ui inverted right aligned segment" style="padding: 0px;">
                                     <button onclick="return confirm('Are you sure?')" class = "ui button green" type="submit" >{{ actiontype }}</button>
