--- a/inventory/templates/inventory/miscellaneous_inventory_list.html
+++ b/inventory/templates/inventory/miscellaneous_inventory_list.html
@@ -13,16 +13,28 @@
 <table id="tabledata" class="ui celled table responsive nowrap" style="width:100%">
     <thead>
         <tr>
-            <th>Quantity</th>
-            <th>Date Counted</th>
-            <th>Counted By</th>
+            <th>Miscellaneous</th>
+            <th>Unit of Measurement</th>
+            <th>Qauntity</th>
+            <th></th>
         </tr>
     </thead>
         <tbody>
             {% for data in data %}
             <tr>
+                <td style="width:400px;" >
+                    <a href="{% url 'inventory:miscellaneous_inventory_count' data.id %}">{{ data.miscellaneous }}</a>
+                </td>
+                <td>{{ data.miscellaneous.uom }}</td>
                 <td>{{ data.quantity }}</td>
-                <td>{{ data.date_counted }}</td>    
+                <td class="center aligned" style="width:100px;">
+                    <a href="{% url 'inventory:miscellaneous_count_form' data.id %}" style="margin-right:10px;">
+                        <i class="teal list ol icon"></i>
+                    </a>
+                    <a href="{% url 'inventory:miscellaneous_receive_form' data.id %}" style="margin-right:10px;">
+                        <i class="teal dolly flatbed icon"></i>
+                    </a>
+                </td>       
             </tr>
             {% endfor %}
         </tbody>
