--- a/inventory/templates/inventory/miscellaneous_list.html
+++ b/inventory/templates/inventory/miscellaneous_list.html
@@ -13,25 +13,26 @@
 <table id="tabledata" class="ui celled table responsive nowrap" style="width:100%">
     <thead>
         <tr>
-            <th>Equipment</th>
-            <th>Qauntity</th>
+            <th>Miscellaneous</th>
+            <th>Unit of Measurement</th>
+            <th>Description</th>
             <th></th>
         </tr>
     </thead>
         <tbody>
             {% for data in data %}
             <tr>
-                <td style="width:500px;" >
-                    <a href="{% url 'inventory:equipment_inventory_count' data.id %}">{{ data.equipment }}</a>
-                </td>
-                <td>{{ data.quantity }}</td>
+                <td style="width:300px;" >{{ data.miscellaneous }}</td>
+                <td style="width:100px;" >{{ data.uom }}</td>
+                <td>{{ data.description }}</td>
                 <td class="center aligned" style="width:100px;">
-                    <a href="{% url 'inventory:equipment_count_form' data.id %}" style="margin-right:10px;">
-                        <i class="teal list ol icon"></i>
+                    <a href="{% url 'inventory:miscellaneous_edit' data.id %}" style="margin-right:10px;">
+                        <i class="blue edit icon"></i>
                     </a>
-                    <a href="{% url 'inventory:equipment_receive_form' data.id %}" style="margin-right:10px;">
-                        <i class="teal dolly flatbed icon"></i>
+                    <a onclick="return confirm('Are you sure?')" class = "button"   href="{% url 'inventory:miscellaneous_delete' data.id %}">
+                        <i class="red trash alternate icon"></i>
                     </a>
+                           
                 </td>       
             </tr>
             {% endfor %}
