--- a/planningandacquiring/templates/planningandacquiring/K9_list.html
+++ b/planningandacquiring/templates/planningandacquiring/K9_list.html
@@ -23,7 +23,7 @@
 			{% if k9 %}
 				{% for K9 in k9 %}
     				<tr>
-    					<td><a  href="{% url 'planningandacquiring:K9_detail' K9.id %}">{{K9}}</a></td>
+    					<td><a  href="{% url 'planningandacquiring:K9_detail' K9.id %}">{{K9.name}}</a></td>
                         <td>{{ K9.serial_number }}</td>
     					<td>{{ K9.breed }}</td>
     					<td>{{ K9.sex }}</td>
