--- a/unitmanagement/templates/unitmanagement/health_form.html
+++ b/unitmanagement/templates/unitmanagement/health_form.html
@@ -28,10 +28,8 @@
                 <label>Treatment</label>
                 {{form.treatment}}
             </div>
-            <div class="ui inverted right aligned segment" style="padding: 0px;">
-                <button onclick="return confirm('Are you sure?')" class = "ui button green" type="submit" >{{ actiontype }}</button>
-            </div>
-            <table style="width:100%">
+
+            <table>
                 <tbody>
                 {% for form in formset %}
                 <tr id="{{ form.prefix }}-row" class="formset_class">
@@ -41,11 +39,19 @@
                             <span class ="text-danger small">{{field.errors}}</span>
                             <th>{{field.label_tag}}</th>
                             <td>{{field}}</td>
+            
+                            {% for item in item %}
+                            <option value="{{ item.id }}">{{ item.item_name }}</option>
+                            {% endfor %}
                     {% endfor %}
                 </tr>
                 {% endfor %}
                 </tbody>
             </table>
+
+            <div class="ui inverted right aligned segment" style="padding: 0px;">
+                <button onclick="return confirm('Are you sure?')" class = "ui button green" type="submit" >{{ actiontype }}</button>
+            </div>
             {{formset.management_form}}
         </form>
     </div>
