--- a/planningandacquiring/templates/planningandacquiring/add_donator.html
+++ b/planningandacquiring/templates/planningandacquiring/add_donator.html
@@ -6,13 +6,13 @@
 </h1>
 
 <div class="ui ordered steps">
-  <div class="active step">
+  <div class="completed step">
     <div class="content">
       <div class="title">K9 Form</div>
       <div class="description">Provide your received K9 Data</div>
     </div>
   </div>
-  <div class="disabled step">
+  <div class="active step">
     <div class="content">
       <div class="title">Previous Ownership Form</div>
       <div class="description">Provide previous owner data</div>
@@ -32,41 +32,38 @@
             <div class="{{ style }} row"> {{ message }}</div>
         {% endfor %}
     {% endif %}
-<form class = "ui inverted form" action="{% url 'planningandacquiring:add_K9_form' %}" method="post">
+<form class = "ui inverted form" action="{% url 'planningandacquiring:add_donator_form'%}" method="post">
     {% csrf_token %}
     <div class="fields">
-        <div class="sixteen wide field">
-            <label>Name</label>
-            {{form.name}}
+        <div class="six wide field">
+            <label>First Name</label>
+            {{form.first_name}}
+        </div>
+        <div class="four wide field">
+            <label>Middle Name</label>
+            {{form.middle_name}}
+        </div>
+        <div class="six wide field">
+            <label>Last Name</label>
+            {{form.last_name}}
         </div>
     </div>
 
     <div class="fields">
         <div class="eight wide field">
-            <label>Breed</label>
-            {{form.breed}}
+            <label>Email</label>
+            {{form.email}}
         </div>
-        <div class="four wide field">
-            <label>Sex</label>
-            {{form.sex}}
-        </div>
-        <div class="four wide field">
-            <label>Color</label>
-            {{form.color}}
+        <div class="eight wide field">
+            <label>Contact Number</label>
+            {{form.contact_no}}
         </div>
     </div>
 
-    <div class="fields">
-        <div class="four wide field">
-            <label>Birthdate</label>
-            {{form.birth_date}}
+        <div class="field">
+            <label>Address</label>
+            {{form.address}}
         </div>
-            <div class="four wide field">
-        <label>Microchip</label>
-        {{form.microchip}}
-    </div>
-    </div>
-
 
 
     <div class="ui inverted right aligned segment" style="padding: 0px;">
