--- a/profiles/templates/profiles/sidebar_um.html
+++ b/profiles/templates/profiles/sidebar_um.html
@@ -7,27 +7,21 @@
               <div class="ui fluid container">
                     <div class="ui grid">
                         <div class="three wide column">
-                                <div class="ui pointing vertical menu" style="width:230px;">
-                                    <div class = "subdiv">
-                                            <a class = "submenu" href="#"  style="font-weight:bold;color:black;font-size:15px;">Unit Management Menu</a>
-                                           
-                                    </div>
-                                    <div class = "subdiv">
-                                            <a class = "submenu" href="{% url 'profiles:add_User_form'%}">Add User</a>
-                                            <i class="bell icon"></i>
-                                    </div>
-                                    <div class = "subdiv">
-                                            <a class = "submenu" href="{% url 'unitmanagement:health_form'%}">Health Form</a>
-                                            <i class="first aid icon"></i>
-                                    </div>
-                                    <div class = "subdiv">
-                                        <a class = "submenu" href="{% url 'unitmanagement:physical_exam_form'%}">Physical Exam Form</a>
+                                <div class="ui tiny pointing vertical menu" style="width:230px;">
+                                    <a class="item"> <b>Unit Management Menu</b></a>
+                                    
+                                    <a href="{% url 'profiles:add_User_form'%}" class="item">Add User Form
+                                        <i class="user icon"></i>
+                                    </a>  
+                                    <a href="{% url 'unitmanagement:health_form'%}" class="item">Health Form
+                                        <i class="first aid icon"></i>
+                                    </a>  
+                                    <a href="{% url 'unitmanagement:physical_exam_form'%}" class="item">Physical Exam Form
                                         <i class="heartbeat icon"></i>
-                                    </div>
-                                    <div class = "subdiv">
-                                        <a class = "submenu" href="{% url 'unitmanagement:health_record'%}">Health Records</a>
+                                    </a>  
+                                    <a href="{% url 'unitmanagement:health_record'%}" class="item">Health Records
                                         <i class="h square icon"></i>
-                                    </div>
+                                    </a>  
                                 </div>
                         </div>
                         <!>
